--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "tmux/plugins/tpm"]
 	path = tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm
+[submodule "config/alacritty/remote/alacritty-theme/alacritty"]
+	path = config/alacritty/remote/alacritty-theme/alacritty
+	url = https://github.com/catppuccin/alacritty.git
+[submodule "config/alacritty/remote/alacritty-theme/catppuccin"]
+	path = config/alacritty/remote/alacritty-theme/catppuccin
+	url = https://github.com/catppuccin/alacritty.git
