--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -29,7 +29,7 @@ import:
 env:
  TERM: alacritty
 
-window:
+#window:
   # Window dimensions (changes require restart)
   #
   # Number of lines/columns (not pixels) in the terminal. The number of columns
@@ -51,9 +51,9 @@ window:
   #
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
-  padding:
-    x: 4
-    y: 4
+  #padding:
+  #  x: 0
+  #  y: 0
 
   # Spread additional padding evenly around the terminal content.
   #dynamic_padding: false
@@ -894,6 +894,9 @@ shell:
 
 window:
  opacity: 1
+ padding:
+  x: 4
+  y: 4
 
 font: 
  draw_bold_text_with_bright_colors: true
